<resources>
    <string name="app_name">健康生活</string>
    <string name="btn_enter">进入体验</string>

    <string name="tab_news">健康资讯</string>
    <string name="tab_knowledge">健康知识</string>
    <string name="tab_food">健康食谱</string>
    <string name="tab_drug">药品直达</string>

    <string name="newDetial_title">详情页</string>


    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="isBottom">已经到底了！！</string>
    <string name="nullData">Sorry!!这里没东西看..</string>
    <string name="clickAgainExit">再按一次退出</string>
    <string name="myFavour">我的收藏</string>
    <string name="about">关于</string>
    <string name="exit">退出</string>
    <string name="neededSource">所需材料:</string>
</resources>
