<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:background="@color/colorPrimary">

        <ImageView
            android:clickable="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:background="?attr/selectableItemBackground"
            android:src="@drawable/icon_avatar" />

    </RelativeLayout>

    <TextView
        style="@style/LeftMenuTextViewType"
        android:drawableLeft="@drawable/ic_theme"
        android:text="@string/myFavour" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1.0"
        android:visibility="invisible" />

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/background" />

    <TextView

        style="@style/LeftMenuTextViewType"
        android:drawableLeft="@drawable/ic_about"
        android:text="@string/about" />

    <TextView
        android:drawableLeft="@drawable/ic_exit"
        style="@style/LeftMenuTextViewType"
        android:text="@string/exit" />


</LinearLayout>